Remove JRE 8 Install Information
Updating Java for Improved Performance
This is no longer necessary in 0.98a!
(because 0.98a includes Java 17 instead of 7)